--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.url=jdbc:mysql://${DB_HOST:10.4.56.90}:${DB_PORT:3306}/${DB_NA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.time-zone= Asia/Bangkok
+server.error.include-message=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
 
