--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.time-zone= Asia/Bangkok
 
+server.error.include-message=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=true
+
