--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jackson.time-zone= Asia/Bangkok
 server.error.include-message=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
+jwt.secret=javainuse
+spring.main.allow-circular-references=true
