refresh token not finish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jackson.time-zone= Asia/Bangkok
 server.error.include-message=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
-jwt.secret=javainuse
+#jwt.secret=javainuse
+jwt.secret=secret_key123
+jwt.expirationDateInMs=60
+jwt.refreshExpirationDateInMs=60
 spring.main.allow-circular-references=true
