finish refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.jackson.time-zone= Asia/Bangkok
 server.error.include-message=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
-#jwt.secret=javainuse
-jwt.secret=secret_key123
-jwt.expirationDateInMs=60
-jwt.refreshExpirationDateInMs=60
+jwt.secret=javainuse
+jwt.expirationDateInMs=1800
+jwt.refreshExpirationDateInMs=86400
 spring.main.allow-circular-references=true
