--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
