--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
+#host
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=${DB_PASSWORD:mysql}
 spring.datasource.username=${DB_USER:kw1}
 spring.datasource.url=jdbc:mysql://${DB_HOST:10.4.56.90}:${DB_PORT:3306}/${DB_NAME:Clinics}?useSSL=false
+#local-time
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.time-zone= Asia/Bangkok
+#error message
 server.error.include-message=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
+#time token
 jwt.secret=javainuse
 jwt.expirationDateInMs=1800
 jwt.refreshExpirationDateInMs=86400
 spring.main.allow-circular-references=true
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wppoyo@gmail.com
+spring.mail.password=jgxnxaniytaytjxa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
