--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.main.allow-circular-references=true
 #mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=wppoyo@gmail.com
-spring.mail.password=jgxnxaniytaytjxa
+spring.mail.username=oasip.test@gmail.com
+spring.mail.password=oasiptest123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
