comment email && commit status pbi 33.4-33.5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ jwt.refreshExpirationDateInMs=86400
 spring.main.allow-circular-references=true
 
 #mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=oasip.test@gmail.com
-spring.mail.password=dlvougmyvhpgifuh
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=oasip.test@gmail.com
+#spring.mail.password=dlvougmyvhpgifuh
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
