--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,14 @@ jwt.refreshExpirationDateInMs=86400
 spring.main.allow-circular-references=true
 
 #mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=oasip.nw1@gmail.com
-spring.mail.password=chjkfwcmqysututm
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=oasip.nw1@gmail.com
+#spring.mail.password=chjkfwcmqysututm
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+storage.location = upload-dir
+storage2.location = upload-dir/files
