--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,12 @@ jwt.refreshExpirationDateInMs=86400
 spring.main.allow-circular-references=true
 
 #mail
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=oasip.nw1@gmail.com
-#spring.mail.password=chjkfwcmqysututm
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=oasip.nw1@gmail.com
+spring.mail.password=chjkfwcmqysututm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
